RESOLVED FIXED211397
Excessive error logging from daemons trying to use WebKit, under -[UIDevice currentDevice]
https://bugs.webkit.org/show_bug.cgi?id=211397
Summary Excessive error logging from daemons trying to use WebKit, under -[UIDevice c...
Tim Horton
Reported 2020-05-04 14:01:02 PDT
Excessive error logging from daemons trying to use WebKit, under -[UIDevice currentDevice]
Attachments
Patch (4.10 KB, patch)
2020-05-04 14:01 PDT, Tim Horton
no flags
Patch (5.64 KB, patch)
2020-05-05 00:42 PDT, Tim Horton
no flags
Patch (5.63 KB, patch)
2020-05-05 00:43 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-05-04 14:01:17 PDT
Tim Horton
Comment 2 2020-05-04 14:01:19 PDT
EWS
Comment 3 2020-05-04 15:11:47 PDT
Committed r261117: <https://trac.webkit.org/changeset/261117> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398409 [details].
Tim Horton
Comment 4 2020-05-04 18:18:45 PDT
Reverted r261117 for reason: broke Committed r261135: <https://trac.webkit.org/changeset/261135>
Darin Adler
Comment 5 2020-05-04 23:52:55 PDT
Comment on attachment 398409 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398409&action=review > Source/WebKit/Shared/UserInterfaceIdiom.mm:46 > + // If we are in a dameon, we cannot use UIDevice. Fall back to checking the hardware itself. typo in "daemon" here
Tim Horton
Comment 6 2020-05-05 00:42:32 PDT
Tim Horton
Comment 7 2020-05-05 00:43:30 PDT
EWS
Comment 8 2020-05-05 02:03:25 PDT
Committed r261157: <https://trac.webkit.org/changeset/261157> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398488 [details].
Note You need to log in before you can comment on or make changes to this bug.