Excessive error logging from daemons trying to use WebKit, under -[UIDevice currentDevice] https://bugs.webkit.org/show_bug.cgi?id=211397 <rdar://problem/61635403>

Reviewed by Simon Fraser.

* Shared/UserInterfaceIdiom.mm:
(WebKit::userInterfaceIdiomIsPad):
Adjust userInterfaceIdiomIsPad so that in daemons, it consults only MobileGestalt,
which returns the actual hardware model, and does not try to use UIDevice.
UIDevice is more accurate for applications because it will report that
the device is an iPhone when called inside an iPhone app running on iPad,
but it cannot be used in daemons that do not have a UIApplication.

For the behaviors we gate on this bit, it makes sense to use iPhone
behaviors on iPad in the iPhone app jail, so we continue using
UIDevice if possible.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration init]):
Make use of the new mechanism instead of going straight to MobileGestalt,
for the aforementioned reasons.


Canonical link: https://commits.webkit.org/224291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261117 268f45cc-cd09-0410-ab3c-d52691b4dbfc